--- a/myapp/Dockerfile
+++ b/myapp/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY myapp/target/myapp.jar app.jar
+COPY target/myapp.jar app.jar
 CMD ["java", "-jar", "app.jar"]
